<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="FuncParoNodoCorteH4Remote1" Id="{9c65a0f8-2341-4d6a-a68d-fcc42b6d8542}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM FuncParoNodoCorteH4Remote1
VAR
	Funci_CortHum4:fb_Funciones_Paro;
	FunGeneCortHum4: FuncGeneralesCortHum4;
	//Entradas Corte húmedo 4
	Ftc_CortHum4: BOOL;	
	ForzadoFtcCortHum4:BOOL;	
	Consenso_CortHum4: BOOL;
	//Entradas fotocelula 2 libre
	Ftc2_Libre: BOOL;
	ForzadoFtc2_Libre: BOOL;
	Consenso_Ftc2_Libre: BOOL;
	//Entradas fotocelula 3 libre
	Ftc3_Libre: BOOL;
	ForzadoFtc3_Libre: BOOL;
	Consenso_Ftc3_Libre: BOOL;
	//Entradas fotocelula 4 libre
	Ftc4_Libre: BOOL;
	ForzadoFtc4_Libre: BOOL;
	Consenso_Ftc4_Libre: BOOL;
	
//	Estructuras de las variables a enviar  
	CortHum4StrFuncParoEnviar:StrFuncParoEnviar;
	Ftc2StrFuncParoEnviar:StrFuncParoEnviar;	
	Ftc3StrFuncParoEnviar:StrFuncParoEnviar;
	Ftc4StrFuncParoEnviar:StrFuncParoEnviar;
END_VAR
VAR RETAIN
END_VAR
VAR PERSISTENT 
	HMI_Tiempo_Offset_MParo:INT:=5;
	HMI_TiempoFiltradoFotocel:TIME:=T#2S;
// Generales 
	sModeloActualTabla:STRING;
	sModeloEleccionTabla:STRING;
	sFechaInicModeloTab:STRING;
	sJustificaParoComun:STRING;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//Funciones de paro para cada zona(Fotocelula)

//>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>         	Corte húmedo 4         <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
Funci_CortHum4(Fotocelula:=Ftc_CortHum4 OR ForzadoFtcCortHum4, 
					Tiempo_Offset_MParo:=HMI_Tiempo_Offset_MParo, 
					TiempoFiltradoFotocel:=HMI_TiempoFiltradoFotocel,
					_StrFuncParoEnviar => CortHum4StrFuncParoEnviar,
					S_Justi_Paro_Ftc:=FunGeneCortHum4.s_JustificaParoComun);
					
						
						
Direccionamiento_variables_com();
LinkadoEntradas();
FunGeneCortHum4(s_JustificaParoComun => sJustificaParoComun,s_ModeloActualTabla => sModeloActualTabla,s_ModeloEleccionTabla => sModeloEleccionTabla,s_FechaInicModeloTab=>sFechaInicModeloTab);

]]></ST>
    </Implementation>
    <Action Name="Direccionamiento_variables_com" Id="{9a5097b9-5e81-4304-8580-b5fdcba6dc39}">
      <Implementation>
        <ST><![CDATA[// Direccionamiento de las variables a la marca que les corresponde donde despés se leeran desde el plc maestro



//								>>>>>>>>>>>>>>>>>>>>>>>>>>>>      WORDS    <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<

	Var_Com_CH4_MulDis.aWordCom[50]:= INT_TO_WORD (CortHum4StrFuncParoEnviar.Cont_Piezas);	    //Contadores de cada fotocelula 
	Var_Com_CH4_MulDis.aWordCom[51]:= INT_TO_WORD (Ftc2StrFuncParoEnviar.Cont_Piezas);		//Contadores de cada fotocelula 
	Var_Com_CH4_MulDis.aWordCom[52]:= INT_TO_WORD (Ftc3StrFuncParoEnviar.Cont_Piezas);		//Contadores de cada fotocelula 
	Var_Com_CH4_MulDis.aWordCom[53]:= INT_TO_WORD (Ftc4StrFuncParoEnviar.Cont_Piezas);		//Contadores de cada fotocelula 
	Var_Com_CH4_MulDis.aWordCom[54]:= INT_TO_WORD (CortHum4StrFuncParoEnviar.Min_Parado_Ftc);			//Minutos actuales parado
	Var_Com_CH4_MulDis.aWordCom[55]:= INT_TO_WORD (Ftc2StrFuncParoEnviar.Min_Parado_Ftc);			//Minutos actuales parado
	Var_Com_CH4_MulDis.aWordCom[56]:= INT_TO_WORD (Ftc3StrFuncParoEnviar.Min_Parado_Ftc);			//Minutos actuales parado
	Var_Com_CH4_MulDis.aWordCom[57]:= INT_TO_WORD (Ftc4StrFuncParoEnviar.Min_Parado_Ftc);			//Minutos actuales parado
	
	
	
//                           	>>>>>>>>>>>>>>>>>>>>>>>>>>>>      TIME   <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
	
	
	Var_Com_CH4_MulDis.aTimeCom[25]:=  CortHum4StrFuncParoEnviar.t_Entre_Piez_Ftc; 			//Tiempo entre piezas
	Var_Com_CH4_MulDis.aTimeCom[26]:=  Ftc2StrFuncParoEnviar.t_Entre_Piez_Ftc;			//Tiempo entre piezas
	Var_Com_CH4_MulDis.aTimeCom[27]:= Ftc3StrFuncParoEnviar.t_Entre_Piez_Ftc;				//Tiempo entre piezas
	Var_Com_CH4_MulDis.aTimeCom[28]:= Ftc4StrFuncParoEnviar.t_Entre_Piez_Ftc;				//Tiempo entre piezas
	Var_Com_CH4_MulDis.aTimeCom[29]:= CortHum4StrFuncParoEnviar.t_Entr_Piez_Ante_Ftc; 		//Tiempo entre piezas anterior
	Var_Com_CH4_MulDis.aTimeCom[30]:= Ftc2StrFuncParoEnviar.t_Entr_Piez_Ante_Ftc; 		//Tiempo entre piezas anterior
	Var_Com_CH4_MulDis.aTimeCom[31]:= Ftc3StrFuncParoEnviar.t_Entr_Piez_Ante_Ftc; 		//Tiempo entre piezas anterior
	Var_Com_CH4_MulDis.aTimeCom[32]:= Ftc4StrFuncParoEnviar.t_Entr_Piez_Ante_Ftc; 		//Tiempo entre piezas anterior
	
	
	
	
//                           	>>>>>>>>>>>>>>>>>>>>>>>>>>>>      STRING  <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
    Var_Com_CH4_MulDis.aStringCom[20] := CortHum4StrFuncParoEnviar.H_InParo_Ftc;         //Hora inicio paro 
	Var_Com_CH4_MulDis.aStringCom[21] := Ftc2StrFuncParoEnviar.H_InParo_Ftc;         //Hora inicio paro 
	Var_Com_CH4_MulDis.aStringCom[22] := Ftc3StrFuncParoEnviar.H_InParo_Ftc;         //Hora inicio paro 
	Var_Com_CH4_MulDis.aStringCom[23] := Ftc4StrFuncParoEnviar.H_InParo_Ftc;         //Hora inicio paro 
	Var_Com_CH4_MulDis.aStringCom[24] := CortHum4StrFuncParoEnviar.H_FinParo_Ftc;        //Hora Fin paro 
	Var_Com_CH4_MulDis.aStringCom[25] := Ftc2StrFuncParoEnviar.H_FinParo_Ftc;        //Hora Fin paro 
	Var_Com_CH4_MulDis.aStringCom[26] := Ftc3StrFuncParoEnviar.H_FinParo_Ftc;        //Hora Fin paro 
	Var_Com_CH4_MulDis.aStringCom[27] := Ftc4StrFuncParoEnviar.H_FinParo_Ftc;        //Hora Fin paro 
	Var_Com_CH4_MulDis.aStringCom[28] := CortHum4StrFuncParoEnviar.S_Justi_Paro_Ftc;		//Justificación del paro
	Var_Com_CH4_MulDis.aStringCom[29] := Ftc2StrFuncParoEnviar.S_Justi_Paro_Ftc;		//Justificación del paro
	Var_Com_CH4_MulDis.aStringCom[30] := Ftc3StrFuncParoEnviar.S_Justi_Paro_Ftc;		//Justificación del paro
	Var_Com_CH4_MulDis.aStringCom[31] := Ftc4StrFuncParoEnviar.S_Justi_Paro_Ftc;		//Justificación del paro
	
	
//                           	>>>>>>>>>>>>>>>>>>>>>>>>>>>>      Bool  <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<	

	Var_Com_CH4_MulDis.aBoolCom[99] := CortHum4StrFuncParoEnviar.Fotocelula;						//Fotocelula Real
	Var_Com_CH4_MulDis.aBoolCom[100] := Ftc2StrFuncParoEnviar.Fotocelula;						//Fotocelula Real
	Var_Com_CH4_MulDis.aBoolCom[101] := Ftc3StrFuncParoEnviar.Fotocelula;						//Fotocelula Real
	Var_Com_CH4_MulDis.aBoolCom[102] := Ftc4StrFuncParoEnviar.Fotocelula;						//Fotocelula Real
	Var_Com_CH4_MulDis.aBoolCom[103] := CortHum4StrFuncParoEnviar.MParo_Ftc;				//Marca de paro 
	Var_Com_CH4_MulDis.aBoolCom[104] := Ftc2StrFuncParoEnviar.MParo_Ftc;				//Marca de paro 
	Var_Com_CH4_MulDis.aBoolCom[105] := Ftc3StrFuncParoEnviar.MParo_Ftc;				//Marca de paro 
	Var_Com_CH4_MulDis.aBoolCom[106] := Ftc4StrFuncParoEnviar.MParo_Ftc;				//Marca de paro 
	Var_Com_CH4_MulDis.aBoolCom[107] := CortHum4StrFuncParoEnviar.M_SinParo_Ftc;			//Marca de sin paro activo
	Var_Com_CH4_MulDis.aBoolCom[108] := Ftc2StrFuncParoEnviar.M_SinParo_Ftc;			//Marca de sin paro activo
	Var_Com_CH4_MulDis.aBoolCom[109] := Ftc3StrFuncParoEnviar.M_SinParo_Ftc;			//Marca de sin paro activo
	Var_Com_CH4_MulDis.aBoolCom[110] := Ftc4StrFuncParoEnviar.M_SinParo_Ftc;			//Marca de sin paro activo
	Var_Com_CH4_MulDis.aBoolCom[111] := CortHum4StrFuncParoEnviar.tFiltro_up_Ftc;			//Q Temp Up Filtro Fotocelulas
	Var_Com_CH4_MulDis.aBoolCom[112] := Ftc2StrFuncParoEnviar.tFiltro_up_Ftc;			//Q Temp Up Filtro Fotocelulas
	Var_Com_CH4_MulDis.aBoolCom[113] := Ftc3StrFuncParoEnviar.tFiltro_up_Ftc;			//Q Temp Up Filtro Fotocelulas
	Var_Com_CH4_MulDis.aBoolCom[114] := Ftc4StrFuncParoEnviar.tFiltro_up_Ftc;			//Q Temp Up Filtro Fotocelulas
	Var_Com_CH4_MulDis.aBoolCom[115] := CortHum4StrFuncParoEnviar.tFiltro_down_Ftc;		//Q Temp Down Filtro Fotocelulas
	Var_Com_CH4_MulDis.aBoolCom[116] := Ftc2StrFuncParoEnviar.tFiltro_down_Ftc;		//Q Temp Down Filtro Fotocelulas
	Var_Com_CH4_MulDis.aBoolCom[117] := Ftc3StrFuncParoEnviar.tFiltro_down_Ftc;		//Q Temp Down Filtro Fotocelulas
	Var_Com_CH4_MulDis.aBoolCom[118] := Ftc4StrFuncParoEnviar.tFiltro_down_Ftc;		//Q Temp Down Filtro Fotocelulas]]></ST>
      </Implementation>
    </Action>
    <Action Name="LinkadoEntradas" Id="{b69648cb-6431-495f-953a-43362874fee1}">
      <Implementation>
        <ST><![CDATA[// Linkado entradas

Ftc_CortHum4:=      main.id0Remoto1.0;
Consenso_CortHum4:= TRUE;//main.id0Remoto1.1;


Ftc2_Libre:=      main.id0Remoto1.2;
Consenso_Ftc3_Libre:= TRUE;// main.id0Remoto1.3;


Ftc3_Libre:=      main.id0Remoto1.4;
Consenso_Ftc3_Libre:= TRUE;// main.id0Remoto1.5;


Ftc4_Libre:=      main.id0Remoto1.6;
Consenso_Ftc4_Libre:= TRUE;// main.id0Remoto1.7;





]]></ST>
      </Implementation>
    </Action>
    <LineIds Name="FuncParoNodoCorteH4Remote1">
      <LineId Id="43" Count="6" />
      <LineId Id="122" Count="0" />
      <LineId Id="50" Count="0" />
      <LineId Id="86" Count="1" />
      <LineId Id="89" Count="1" />
      <LineId Id="154" Count="0" />
      <LineId Id="163" Count="0" />
      <LineId Id="162" Count="0" />
    </LineIds>
    <LineIds Name="FuncParoNodoCorteH4Remote1.Direccionamiento_variables_com">
      <LineId Id="1" Count="0" />
      <LineId Id="3" Count="2" />
      <LineId Id="2" Count="0" />
      <LineId Id="7" Count="0" />
      <LineId Id="6" Count="0" />
      <LineId Id="9" Count="1" />
      <LineId Id="8" Count="0" />
      <LineId Id="11" Count="0" />
      <LineId Id="15" Count="2" />
      <LineId Id="26" Count="0" />
      <LineId Id="43" Count="2" />
      <LineId Id="23" Count="0" />
      <LineId Id="27" Count="0" />
      <LineId Id="29" Count="6" />
      <LineId Id="28" Count="0" />
      <LineId Id="48" Count="5" />
      <LineId Id="55" Count="3" />
      <LineId Id="61" Count="2" />
      <LineId Id="60" Count="0" />
      <LineId Id="59" Count="0" />
      <LineId Id="64" Count="4" />
      <LineId Id="71" Count="0" />
      <LineId Id="70" Count="0" />
      <LineId Id="73" Count="2" />
      <LineId Id="72" Count="0" />
      <LineId Id="76" Count="2" />
      <LineId Id="69" Count="0" />
      <LineId Id="79" Count="7" />
      <LineId Id="88" Count="2" />
    </LineIds>
    <LineIds Name="FuncParoNodoCorteH4Remote1.LinkadoEntradas">
      <LineId Id="2" Count="0" />
      <LineId Id="40" Count="0" />
      <LineId Id="3" Count="1" />
      <LineId Id="32" Count="0" />
      <LineId Id="5" Count="2" />
      <LineId Id="34" Count="0" />
      <LineId Id="8" Count="2" />
      <LineId Id="36" Count="0" />
      <LineId Id="11" Count="2" />
      <LineId Id="39" Count="0" />
      <LineId Id="14" Count="3" />
      <LineId Id="1" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>